welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: identifier expected but integer literal found.
    motif[i-1] = couleur
            ^Array1:8: error: ']' expected but ';' found.
    avance()
^Array1:10: error: '<-' expected but ')' found.
  for (j< 2 to getMondeLargeur()){
                                ^Array1:16: error: illegal start of simple expression
} 
^